<resources>
    <string name="app_name">BringTheNight</string>
    <string name="empresas">Empresas</string>
    <string name="seguir">Seguir</string>
    <string name="number">number</string>
    <string name="seguidores">Seguidores</string>
    <string name="criar">Criar</string>
    <string name="titulo">Titulo</string>
    <string name="criar_evento">Criar evento</string>
    <string name="adiconar_imagem">Adiconar Imagem</string>
    <string name="editar_evento">Editar Evento</string>
    <string name="editar">Editar</string>
    <string name="trocar_imagem">Trocar Imagem</string>
    <string name="title_activity_maps">Map</string>
    <string name="data">Data</string>
    <string name="title_activity_mapa_registo">Map</string>
    <string name="nova_localizacao">Nova Localização</string>
    <string name="ver_mapa">Ver Mapa</string>
    <string name="chat">Chat</string>
    <string name="title_activity_event_map">Map</string>
    <string name="title_activity_chat_empresa">ChatEmpresaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps_users">Map</string>
</resources>